sample-node-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app-svc
  namespace: node-app
spec:
  ports:
    - name: node-app-svc
      port: 80
      protocol: TCP
      targetPort: 8888
  selector:
    app: node-app
